[package]
name = "dbf-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbase = { version = "0.3.0", features = ["serde", "yore"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15.6"
